...
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                android:text="See Reviews" />

            <TextView
                android:id="@+id/roster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="See Roster"
                android:textColor="#000"
                android:textSize="12dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/courseEnrollmentTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enrolled:"
                android:layout_weight="0"
                android:textColor="#000"
                android:textSize="12dp"
                android:visibility="gone" />

            <Button
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:id = "@+id/enrollBtn"
                android:visibility="gone"
                android:layout_weight="0"
                android:textSize="12dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="end" />
        </LinearLayout>
...
