...
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:autoLink="web"
            android:clickable="true"
            android:id = "@+id/logInNav"
            android:text="Log in"
            android:textColor="@color/crimson"
            android:textStyle="normal|bold" />
    </LinearLayout>

</RelativeLayout>
</ScrollView>
