...
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/seeEnrolledCoursesButton">

        <!-- LinearLayout to contain department names -->
        <LinearLayout
            android:id="@+id/departmentListLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:clipToPadding="false"
            android:clipChildren="false"
...
